# lumon

./: Cargo.toml  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: app_state.rs  main.rs
apps/api/src/config/: mod.rs
apps/api/src/db/: models.rs
apps/api/src/db/repositories/: bins_repo.rs  classifications_repo.rs  files_repo.rs  mod.rs  sessions_repo.rs  users_repo.rs
apps/api/src/http/: mod.rs  router.rs
apps/api/src/http/handlers/: health.rs  mod.rs
apps/api/src/http/handlers/auth/: login.rs  signup.rs
apps/api/src/http/handlers/file/: create.rs
apps/api/src/http/models/: mod.rs  signup_request.rs
apps/api/src/http/routers/: auth.rs  file.rs  users.rs
apps/api/src/services/: auth_errors.rs  auth_service.rs  errors.rs  file_service.rs  hash_service.rs  mod.rs  token_service.rs
infra/db/migrations/: 001_initial.sql
