[package]
name = "lumon-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono", "json"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
argon2 = "0.5.3"
rand_core = "0.9.5"